# count_count

./: .gitignore  CMakeLists.txt  README.md  build_wasm.sh  vcpkg.json  vcpkg_configuration.json
.github/workflows/: ci.yml
cmake/: native_build.cmake  wasm_build.cmake
src/: main.cpp  result.cpp  result.h  result.inl  result_void.inl  threadsafe_queue.h  wasm_main.cpp
src/app/: application.cpp  application.h  camera_manager.cpp  camera_manager.h  main_window_controller.cpp  main_window_controller.h  settings_manager.cpp  settings_manager.h
src/async/: cout_receiver.h  cout_receiver.inl  immovable.h  just.h  just.inl  result.h  run_loop_context.cpp  run_loop_context.h  run_loop_context.inl  sync_wait.h  sync_wait.inl  then.h  then.inl  thread_context.cpp  thread_context.h
src/gui/: desktop_window.cpp  desktop_window.h  dsektop_window_windows.cpp  visualization.cpp  visualization.h
src/io/: data_location.cpp  data_location.h  jpg.cpp  jpg.h
src/math/: angles.cpp  angles.h  square.h  statistics.h  statistics.inl
src/platform/: build_date.h  build_date.inl  platform.cpp  platform.h
src/processing/: anomalies.cpp  anomalies.h  centroid.cpp  centroid.h  contours.cpp  contours.h  count_teeth.cpp  count_teeth.h  foreground.cpp  foreground.h
src/types/: color_range.cpp  color_range.h  resolution.cpp  resolution.h  rgb.h  settings.cpp  settings.h  tooth_anomaly.cpp  tooth_anomaly.h  tooth_measurement.cpp  tooth_measurement.h
src/util/: flat_map.h  flat_map.inl  logger.h  unique.cpp  unique.h
tests/: test_async.cpp  test_count_teeth.cpp  test_find_anomalies.cpp  test_flat_map.cpp  test_jpg_io.cpp
web/: index.html
